--- a/src/country-details.css
+++ b/src/country-details.css
@@ -12,8 +12,9 @@
   
       /* Content CSS */
       #country-details {
+        position: relative;
         margin: 20px;
-        padding: 20px;
+        padding: 50px 30px 20px 20px;
         background-color: #FFF;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
@@ -50,6 +51,29 @@
         color: #FF6E98;
         transform: scale(1.05);
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+      }
+
+      /* Back Button CSS */
+      #back-button {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        border: none;
+        outline: none;
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 16px;
+        font-weight: bold;
+        color: #FFF;
+        background-color: #FF4081;
+        border-radius: 30px;
+        z-index: 1;
+        cursor: pointer;
+        transition: background-color 0.2s;
+      }
+
+      #back-button:hover {
+        background-color: #FF6E98;
       }
   
       /* Flag Icon CSS */
