--- a/src/country-details.css
+++ b/src/country-details.css
@@ -86,7 +86,7 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        background: url('../public/images/heart.png');
+        background: url('../public/images/lightHeart.png');
         background-size: contain;
         background-repeat: no-repeat;
         opacity: 1;
