--- a/src/home.css
+++ b/src/home.css
@@ -127,6 +127,18 @@
         margin: 5px 0;
     }
 
+    /* Disclaimer styling */
+    #disclaimer {
+        max-width: 400px;
+        margin: 10px auto;
+        padding: 10px;
+        background-color: #FFF;
+        border-radius: 10px;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        font-size: 14px;
+    }
+
     /* Search bar styling */
     .search-bar {
     display: flex;
