--- a/src/country-details.css
+++ b/src/country-details.css
@@ -76,6 +76,28 @@
       #back-button:hover {
         background-color: #FF6E98;
       }
+
+      /* Quick exit button styling */
+      .quick-exit-button {
+        position: absolute;
+        top: 20px;
+        right: 46%;
+        border: none;
+        outline: none;
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 16px;
+        font-weight: bold;
+        color: #FFF;
+        background-color: #FF4081;
+        border-radius: 30px;
+        cursor: pointer;
+        transition: background-color 0.2s;
+    }
+    
+    .quick-exit-button:hover {
+        background-color: #FF6E98;
+    }
   
       /* Flag Icon CSS */
       .flag-icon {
