--- a/src/home.css
+++ b/src/home.css
@@ -242,6 +242,17 @@
         animation: cuteScrollbar 1.5s infinite; /* Apply the animation */
     }
 
+    /* Selection */
+    ::-moz-selection { /* Code for Firefox */
+        color: white;
+        background: #DAB6FF;
+    }
+    
+    ::selection {
+        color: white;
+        background: #DAB6FF;
+    }
+
     #resources {
         display: flex;
         flex-wrap: wrap;
