--- a/src/website/home.css
+++ b/src/website/home.css
@@ -1,6 +1,6 @@
     /* General Body CSS */
     body {
-        cursor: url('../public/cursors/rhinoHeartCursor.cur'), auto;
+        cursor: url('../../public/cursors/rhinoHeartCursor.cur'), auto;
         font-family: 'Helvetica Neue', Arial, sans-serif;
         background: linear-gradient(120deg, #E6E6FA, #C9E8FF); /* Light lavender color and linear gradient to decrease stress */
         color: #333;
@@ -203,14 +203,14 @@
     }   
 
     .cursor-fish {
-        cursor: url('../public/cursors/koiCursor.cur'), auto;
+        cursor: url('../../public/cursors/koiCursor.cur'), auto;
     }
 
     .heart {
         position: absolute;
         width: 30px;
         height: 30px;
-        background: url('../public/images/lightHeart.png');
+        background: url('../../public/images/lightHeart.png');
         background-size: contain;
         background-repeat: no-repeat;
         opacity: 1;
