--- a/src/website/home.css
+++ b/src/website/home.css
@@ -210,7 +210,7 @@
         position: absolute;
         width: 30px;
         height: 30px;
-        background: url('../../public/images/lightHeart.png');
+        background: url('../../public/images/lightHeart.webp');
         background-size: contain;
         background-repeat: no-repeat;
         opacity: 1;
